welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:27: error: not found: value c
 c = Color.YELLOW 
 ^MethodsPicture:28: error: not found: value c
  faireV(c); 
         ^MethodsPicture:30: error: not found: value c
    c = Color.RED
    ^MethodsPicture:31: error: not found: value c
  faireV(c); 
         ^MethodsPicture:33: error: not found: value c
    c = Color.BLUE
    ^MethodsPicture:34: error: not found: value c
  faireV(c); 
         ^MethodsPicture:36: error: not found: value c
    c = Color.GREEN
    ^MethodsPicture:37: error: not found: value c
  faireV(c); 
         ^