welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code

    
override def run() {
  
def faireV(c:Color)
{ 
  avance();
  setCouleurBrosse(c);
  baisseBrosse();
  leveBrosse();
  avance();
  gauche();
  avance();
  baisseBrosse();
  leveBrosse();
  recule();
  droite();
  avance();
    baisseBrosse();
  leveBrosse();
    avance();
		}
  
for (i <-0 to 2)
  {for(i <-0 to 2)
  {
 c = Color.YELLOW 
  faireV(c); 
 gauche();
    c = Color.RED
  faireV(c); 
 gauche();
    c = Color.BLUE
  faireV(c); 
 gauche();
    c = Color.GREEN
  faireV(c); 
 gauche();
    
    
   avance(5);}
  gauche();
  avance(5)
  gauche();
  avance(5);}
}